--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "ggTimeSeries"]
+	path = ggTimeSeries
+	url = https://github.com/thecomeonman/ggtimeseries
+	shallow = true
+	registered = true
